# FPP-project

./: .gitattributes  .pre-commit-config.yaml  README.md  conv.py  pyproject.toml  requirements.txt  response_yav_O.npz  setup.cfg
change_from_sle_branch/: gen_shot_noise.py
data/: data_manager.py  glannual_anomaly_ts_Amon_NorESM1-M_abrupt4xCO2_r1i1p1_000101-015012.txt
data/jones_mann/: jones_mann_fig7.txt
docs/: conf.py  index.rst
jupyter_nb/: Stochastics python.ipynb  counting_process.ipynb  deconv.ipynb  level_crossings.ipynb
src/fpp_project/: conv.py
src/fpp_project/data/: control_run.npz  data_manager.py  temp_rep_I.npz  temp_yav_O.npz
src/fpp_project/utils/: plot_utils.py  slf.py  slf_realisations.py  tools.py  work_scripts.py
utils/: plot_utils.py  sde.npz  slf.py  slf_realisations.py  tools.py  work_scripts.py
