[tool.poetry]
name = "fpp-project"
version = "0.1.0"
description = ""
authors = ["engeir <eirroleng@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
tick = "^0.7.0"
matplotlib = "^3.5.1"
scipy = "^1.7.3"
numpy = "^1.22.1"
sdepy = "^1.2.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
