[tool.poetry]
name = "fpp-project"
version = "0.1.0"
description = ""
authors = ["engeir <eirroleng@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
tick = "^0.7.0"
matplotlib = "^3.5.1"
scipy = "^1.7.3"
sdepy = "^1.2.0"
scikit-learn = "^1.0.2"
numba = "^0.55.1"
uit-scripts = {path = "../../../../programs/uit_scripts", develop=true }
numpy = ">=1.18"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.931"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
pre-commit-hooks = "^4.1.0"
pyupgrade = "^2.31.0"
darglint = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
